third_party/blink/web_tests/external/wpt/touch-events/idlharness.window-expected.txt
This is a testharness.js-based test.
FAIL idl_test setup promise_test: Unhandled rejection with value: object "WebIDLParseError: Syntax error at line 1471, since `interface CustomElementRegistry`:
 define(DOMString name, CustomElementConstructor constructor, optional ElementDefinitionOptions
                        ^ Trailing comma in arguments list"
FAIL Partial interface mixin GlobalEventHandlers: original interface mixin defined assert_true: Original interface mixin should be defined expected true got false
PASS Touch interface: existence and properties of interface object
PASS Touch interface object length
PASS Touch interface object name
PASS Touch interface: existence and properties of interface prototype object
PASS Touch interface: existence and properties of interface prototype object's "constructor" property
PASS Touch interface: existence and properties of interface prototype object's @@unscopables property
PASS Touch interface: attribute identifier
PASS Touch interface: attribute target
PASS Touch interface: attribute screenX
PASS Touch interface: attribute screenY
PASS Touch interface: attribute clientX
PASS Touch interface: attribute clientY
PASS Touch interface: attribute pageX
PASS Touch interface: attribute pageY
PASS Touch interface: attribute radiusX
PASS Touch interface: attribute radiusY
PASS Touch interface: attribute rotationAngle
PASS Touch interface: attribute force
FAIL Touch interface: attribute altitudeAngle assert_true: The prototype object must have a property "altitudeAngle" expected true got false
FAIL Touch interface: attribute azimuthAngle assert_true: The prototype object must have a property "azimuthAngle" expected true got false
FAIL Touch interface: attribute touchType assert_true: The prototype object must have a property "touchType" expected true got false
PASS TouchList interface: existence and properties of interface object
PASS TouchList interface object length
PASS TouchList interface object name
PASS TouchList interface: existence and properties of interface prototype object
PASS TouchList interface: existence and properties of interface prototype object's "constructor" property
PASS TouchList interface: existence and properties of interface prototype object's @@unscopables property
PASS TouchList interface: attribute length
PASS TouchList interface: operation item(unsigned long)
PASS TouchEvent interface: existence and properties of interface object
PASS TouchEvent interface object length
PASS TouchEvent interface object name
PASS TouchEvent interface: existence and properties of interface prototype object
PASS TouchEvent interface: existence and properties of interface prototype object's "constructor" property
PASS TouchEvent interface: existence and properties of interface prototype object's @@unscopables property
PASS TouchEvent interface: attribute touches
PASS TouchEvent interface: attribute targetTouches
PASS TouchEvent interface: attribute changedTouches
PASS TouchEvent interface: attribute altKey
PASS TouchEvent interface: attribute metaKey
PASS TouchEvent interface: attribute ctrlKey
PASS TouchEvent interface: attribute shiftKey
Harness: the test ran to completion.

